* 0.7.1svn - ... - release 23/02/2010

* 0.7.1 - Just the three of us - release 22/02/2010
- Fix external plugins on python 2.2 and older (eg. RHEL3)
- Documentation improvements
- Implement linecache for top-plugins (caching for statistics)
- Added external dstat_qmail plugin to show the length of qmail queues (Tom Van Looy)
- Added external dstat_dstat plugin to show Dstat's own cputime and latency values
- Added --profile option to get profiling statistics when you exit dstat
- Show a message with the default options when no stats are being specified
- Improved page allocation numbers in vm plugin (Hirofumi Ogawa)
- Introduced proc_readline() and proc_spitline() using linecache for top-plugins
- Introduced proc_readlines() and proc_splitlines() using linecache for top-plugins
- Introduced proc_pidlist() for top-plugins
- New tchg() function to format the time depending on width
- Added external dstat_disk_tps plugin to show transactions per second

* 0.7.0 - Tokyo - release 25/11/2009
- Fixed dstat_disk plugin for total calculation on 2.6.25+ kernels (Noel J. Bergman)
- Precompile regular expressions used as a disk filter (self.diskfilter)
- Raise a warning when discovery returns empty
- Improvements to dstat_battery and dstat_cpufreq
- Added external dstat_power plugin to show ACPI power usage
- Simplified logic inside dstat_time
- Added external dstat_ntp plugin to show time from an NTP server
- Flush sys.stdout later in the loop
- Filtering out more interfaces (eg. bonding) in total values (Bert de Bruijn)
- Provide error output when now power information is available (AC power)
- Make topcpu plugin SMP aware (values are not percent per CPU)
- Drop support for Python 1.5 (and removed dstat15 version)
- Introduced splitlines() function that allows a replace/split on readlines()
- Added external dstat_fan plugin to show fan speed
- Added theming support (not exposed to users yet)
- Added --bw/--blackonwhite option to use dark colors on white background